Updating _posts/2016-02-06-create-a-php-script-to-import-the-delimited-clinicaltrialsgov-data-files-into-mysql.html via Laneworks Publish

--- a/_posts/2016-02-06-create-a-php-script-to-import-the-delimited-clinicaltrialsgov-data-files-into-mysql.html
+++ b/_posts/2016-02-06-create-a-php-script-to-import-the-delimited-clinicaltrialsgov-data-files-into-mysql.html
@@ -3,7 +3,7 @@ layout: post
 title: 'Create a PHP Script To Import The Delimited ClinicalTrials.Gov Data Files Into MySQL'
 source: http://adopta-agency.github.io/clinical-trials//2016/02/06/create-a-php-script-to-import-the-delimited-clinicaltrialsgov-data-files-into-mysql/
 domain: adopta-agency.github.io
-image: 
+image: http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/blog/clinical-trials-php-import.png
 ---
 <p>Now that I <a href="https://clinicaltrials.gov/ct2/resources/download">downloaded and unzipped the ClinicalTrials.gov data</a>, I need to import it into a MySQL database for better processing. To assist me, I wrote a simple script for spidering the folder where I downloaded the files, then created a table in the MySQL database I setup, for each file. After each table is created, it imports the delimited data into the database.</p>
 <script src="https://gist.github.com/kinlane/b63f9d616cf920a32a16.js"></script>
