--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,14 @@ title: About This Project
 
 <h1>About This Project</h1>
 <p><br /></p>
+
+<p><a href="https://clinicaltrials.gov"><img style="padding: 15px;" src="http://kinlane-productions.s3.amazonaws.com/api-evangelist-site/blog/clinical-trials-gov.png" alt="" width="250" align="right" /></a></p>
+<p>I received an email from someone at the University of Miami, who had seen my Adopta.Agency presentation in Pittsburgh, and was looking for some help adopting the data available at <a href="https://clinicaltrials.gov">ClinicalTrials.gov</a>. As soon as I dug into the information on the download page, it was clear that this was a perfect candidate for adoption.</p>
+<p>I thought the original comments from the email are very relevant:</p>
+<p style="padding-left: 30px;"><em>I am working on a project that uses data from https://clinicaltrials.gov/ .</em><br /><em>Their API is crap to say the least. </em><br /><em>I was wondering if you could help me out. Is there a tool I could use to get better access to the data?</em><br /><em>If we download the entire thing is an 850MB zipped file in XML.</em><br /><em>I only need a fraction of the trials in the db.</em><br /><em>I guess I am looking for advice on how to proceed.&nbsp;</em></p>
+<p>This is why I started doing Adopta.Agency. There are thousands of data sets available out there for me to adopt. It helps when I have folks reach out, pointing me to specific high value datas ets, that they need access to, so that they can solve a specific problem.&nbsp;</p>
+<p>Many organizations just do not think through the release, presentation, and usability of their open data work. Simple making things available as CSV, and JSON download, as well as evolving a very usable set of APIs, can go a long, long way in encouraging people to do important work around the valuable data and content.</p>
+
 <p>This site is built on the <a href="http://adopta.agency/">Adopta.Agency</a> open data blueprint. It is an <a href="https://github.com/adopta-agency/adopta-blueprint">open Github template designed to be forked</a>. That means it can be copied into your own GitHub account and edited as you deem fit. From there, it can be used to improve upon federal and other public datasets.</p>
 
-<p>You can find everything you need to know about this project on the <a href="http://adopta.agency/">Adopta.Agency website</a>. You can also ask questions via <a href="https://github.com/adopta-agency/">Github</a> or Twitter. (Check out the Team profiles for who to ping on Twitter.)</p>
+<p>You can find everything you need to know about this project on <a href="http://adopta-agency.github.io/clinical-trials/">this webiste</a>. You can also ask questions via <a href="https://github.com/adopta-agency/clinical-trials/issues">Github</a>.</p>
